--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
