--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "OpenStreetMap2"
 uuid = "b4cd1eb8-1e24-11e8-3319-93036a3eb9f3"
-author = ["Some One <someone@email.com>"]
-version = "0.0.0"
+author = ["Landon Wright <Landon.wright91@gmail.com>"]
+version = "0.1.0"
 
 [deps]
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
